apps/media/tautulli/deployment.yaml
#
# Reference:
# https://github.com/Tautulli/Tautulli/wiki/Installation
#

apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: media
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: tautulli
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: tautulli
  type: ClusterIP
  ports:
    - name: http
      port: 8181
      protocol: TCP
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  namespace: media
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: tautulli
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: tautulli
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: tautulli
    spec:
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: abaddon
      containers:
        - name: tautulli
          image: ghcr.io/tautulli/tautulli:v2.18.2 # {"$imagepolicy": "media:tautulli"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8181
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 150Mi
            limits:
              cpu: 500m
              memory: 750Mi
          volumeMounts:
            - name: tautulli-pvc
              mountPath: /config
      volumes:
        - name: tautulli-pvc
          persistentVolumeClaim:
            claimName: tautulli-pvc
