apps/media/tautulli/exporter.yaml
#
# Reference:
# https://github.com/nwalke/tautulli-exporter
#

apiVersion: v1
kind: Service
metadata:
  name: tautulli-exporter
  namespace: media
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: tautulli-exporter
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: tautulli-exporter
  type: ClusterIP
  ports:
    - name: metrics
      port: 9487
      protocol: TCP
      targetPort: metrics
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli-exporter
  namespace: media
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: tautulli-exporter
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: tautulli-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: tautulli-exporter
    spec:
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: abaddon
      containers:
        - name: tautulli-exportarr
          image: docker.io/nwalke/tautulli_exporter:v0.1.0 # {"$imagepolicy": "media:tautulli-exporter"}
          imagePullPolicy: Always
          args:
            - tautulli
          ports:
            - name: metrics
              containerPort: 9487
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
